Split Calc.c into multiple files

--- a/build
+++ b/build
@@ -1,2 +1,2 @@
 #!/bin/bash
-gcc -O2 Calc.c CalcCLI.c -lm -o calc
+gcc -O2 CalcCLI.c -lm -o calc src/arb.c src/command.c src/compute.c src/functions.c src/general.c src/highlight.c src/misc.c src/parser.c src/print.c src/units.c
